--- a/about.html
+++ b/about.html
@@ -14,31 +14,6 @@
             padding: 0;
         }
 
-        .navOp {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-            background-color: #333;
-        }
-
-            .navOp li {
-                float: left;
-                border-right: 1px solid #bbb;
-            }
-
-                .navOp li a {
-                    display: block;
-                    color: white;
-                    text-align: center;
-                    padding: 14px 16px;
-                    text-decoration: none;
-                }
-
-                    .navOp li a:hover {
-                        background-color: #111;
-                    }
-
         .active {
             background-color: #2B3499;
         }
@@ -178,6 +153,17 @@
 <body>
     <!-- Navigation Bar-->
     <div class="navBar">
+        <div class="navHeader">
+            <img src="resources/cheatsheet_logo_nbg.png" alt="html_logo">
+            <div>
+                <h2>Codour</h2>
+                <p style="font-size: 20px;"><i>
+                    Unlocking the Code to<br>
+                    Your Digital Journey
+                </i>
+                </p>
+            </div>
+        </div>
         <ul class="navOp">
             <li><a href="index.html">Home</a></li>
             <li><a href="tutorial.html">Tutorials</a></li>
