--- a/history.html
+++ b/history.html
@@ -56,7 +56,7 @@
                 background-color: #808080;
             }
 
-        .content {
+        .history_content {
             display: none;
         }
         
@@ -182,7 +182,7 @@
     </center>
     <div class = "hisContent">
     <center>
-        <div class="content" id="de1" style="display:block;">
+        <div class="history_content" id="de1" style="display:block;">
             <h2>The Birth of the Web (1989-1990):</h2>
             <ul>
                 <li>Tim Berners-Lee, a British computer scientist, is credited with inventing the World Wide Web. In 1989, he proposed the idea of a global hypertext project while working at CERN (the European Organization for Nuclear Research).</li>
