--- a/about.html
+++ b/about.html
@@ -184,28 +184,24 @@
     <h2>Contributors</h2>
     <div class="devs">
         <div class="dev">
-            <div class="developers">Image</div>
+            <img class="developers" src="resources/1.jpg" alt="Gerry Vien Flores"/>
             <h4>Gerry Vien <br />Flores</h4>
         </div>
         <div class="dev">
-            <div class="developers">Image</div>
+            <img class="developers" src="resources/2.jpg" alt="Sean Neil Dizon"/>
             <h4>Sean Niel <br />Dizon</h4>
         </div>
         <div class="dev">
-            <div class="developers">Image</div>
+            <img class="developers" src="resources/3.JPG" alt="Rhemiel Responde"/>
             <h4>Rhemiel <br />Responde</h4>
         </div>
         <div class="dev">
-            <div class="developers">Image</div>
+            <img class="developers" src="resources/4.jpg" alt="Janelle Montes"/>
             <h4>Janelle <br />Montes</h4>
         </div>
         <div class="dev">
-            <div class="developers">Image</div>
+            <img class="developers" src="resources/5.jpeg" alt="Redel Gorobat"/>
             <h4>Redel <br />Gorobat</h4>
-        </div>
-        <div class="dev">
-            <div class="developers">Image</div>
-            <h4>Paul <br />Brioso</h4>
         </div>
     </div>
     <footer>
